# try_ctyolo

./: .gitignore  CMakeLists.txt  README.md  cqt_tyolo.c  ya2k_yolo.h  yad2k_yolo.c
cqt_gen/: cqt_debug.c  cqt_debug.h  cqt_gen.c  cqt_gen.h
cqt_lib/: Conv2d_same_3x3.c  numpy.c
inc/: cqt_lib.h
weight/: batch_normalization_1_beta_z.npy  batch_normalization_1_gamma_z.npy  batch_normalization_1_moving_mean_z.npy  batch_normalization_1_moving_variance_z.npy  batch_normalization_2_beta_z.npy  batch_normalization_2_gamma_z.npy  batch_normalization_2_moving_mean_z.npy  batch_normalization_2_moving_variance_z.npy  batch_normalization_3_beta_z.npy  batch_normalization_3_gamma_z.npy  batch_normalization_3_moving_mean_z.npy  batch_normalization_3_moving_variance_z.npy  batch_normalization_4_beta_z.npy  batch_normalization_4_gamma_z.npy  batch_normalization_4_moving_mean_z.npy  batch_normalization_4_moving_variance_z.npy  batch_normalization_5_beta_z.npy  batch_normalization_5_gamma_z.npy  batch_normalization_5_moving_mean_z.npy  batch_normalization_5_moving_variance_z.npy  batch_normalization_6_beta_z.npy  batch_normalization_6_gamma_z.npy  batch_normalization_6_moving_mean_z.npy  batch_normalization_6_moving_variance_z.npy  batch_normalization_7_beta_z.npy  batch_normalization_7_gamma_z.npy  batch_normalization_7_moving_mean_z.npy  batch_normalization_7_moving_variance_z.npy  batch_normalization_8_beta_z.npy  batch_normalization_8_gamma_z.npy  batch_normalization_8_moving_mean_z.npy  batch_normalization_8_moving_variance_z.npy  conv2d_1_kernel_z.npy  conv2d_2_kernel_z.npy  conv2d_3_kernel_z.npy  conv2d_4_kernel_z.npy  conv2d_5_kernel_z.npy  conv2d_9_bias_z.npy  conv2d_9_kernel_z.npy
